--- a/task3.html
+++ b/task3.html
@@ -7,12 +7,22 @@
     <link rel="stylesheet" href="task3.css" type="text/css"/>
 </head>
 <body>
-    <div class="img1" ><img src="images/记录页_03.png" alt="返回"/></div>
-    <div class="img2" ><img src="images/整合透底.png" alt="葡萄藤"/></div>
-    <div class="img3" ><img src="images/椭圆 1.png" alt="logo"/></div>
-    <div class="img4" ><img src="images/椭圆 1 拷贝.png" alt="葡萄藤"/></div>
+    <div class="img1" >
+        <img src="images/记录页_03.png" alt="返回"/>
+    </div>
+    <div class="img2" >
+        <img src="images/整合透底.png" alt="葡萄藤"/>
+    </div>
+    <div class="img3" >
+        <img src="images/椭圆 1.png" alt="logo"/>
+        <Span>290560933</Span>
+    </div>
+    <div class="img4" >
+        <img src="images/椭圆 1 拷贝.png" alt="葡萄藤"/>
+        <span>BJPTTeng</span>
+    </div>
     <p class="content">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
-    <p class="_290560933">290560933</p>
-    <p class="BJPTTeng">BJPTTeng</p>
+
+
 </body>
 </html>
