--- a/task3.html
+++ b/task3.html
@@ -7,20 +7,24 @@
     <link rel="stylesheet" href="task3.css" type="text/css"/>
 </head>
 <body>
-    <div class="img1" >
+    <div class="box1" >
         <img src="./images/记录页_03.png" alt="返回"/>
     </div>
-    <div class="img2" >
+    <div class="box2" >
         <img src="./images/整合透底.png" alt="葡萄藤"/>
     </div>
-    <div class="img3" >
+    <div class="box3" >
+        <p class="content">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
+    </div>
+    <div class="box4" >
+        <div class="box5">
         <img src="./images/椭圆 1.png" alt="logo"/>
         <Span>290560933</Span>
-    </div>
-    <div class="img4" >
+        </div>
+        <div class="box6">
         <img src="./images/椭圆 1 拷贝.png" alt="葡萄藤"/>
         <span>BJPTTeng</span>
+        </div>
     </div>
-    <p class="content">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
 </body>
 </html>
